# row-major.net

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  base.html.jinja  cloudbuild-deploy.yaml  cloudbuild.yaml  default.conf  default.nix  go.mod  go.sum  go_dependencies.bzl  index.html.jinja  jinjaize.py  medtracker-webui.Dockerfile  shell.nix  update-vendor.sh
.github/workflows/: medtracker-build.yml  medtracker-deploy.yml  push.yml  row-major-web-build.yml  row-major-web-deploy.yml
artboard/dblayer/: dblayer.go
artboard/dbtypes/: dbtypes.go
artboard/webui/: webui.go
articles/2019-07-21-program-trace-analysis-with-wireshark/: example-protocol-dissector.lua  index.html.jinja  packet_dump.pcap
articles/2020-04-01-mona-lisa-life-revisited/: index.html.jinja
articles/rl-force-tube/: index.html.jinja  rl-force-tube.js
ballistae/: index.html.jinja
bazel-patches/: go_googleapis-deletebuild.patch  go_googleapis-gazelle.patch  org_golang_google_genproto-gazelle.patch
braitenberg-vehicles/: BUILD_INSTRUCTIONS  CMakeLists.txt  bounding_box.hh  braitenberg.cc  example_config.cfg  light_display.cc  light_display.hh  light_model.cc  light_model.hh  logistic.hh  orthographic_viewport.cc  orthographic_viewport.hh  vehicle_display.cc  vehicle_display.hh  vehicle_model.cc  vehicle_model.hh
cloud-checkout/: README.md
frustum/: index.html.jinja
harpoon/aabox/: BUILD.bazel  aabox.go
harpoon/affinetransform/: BUILD.bazel  affinetransform.go
harpoon/camera/: BUILD.bazel  camera.go
harpoon/contact/: BUILD.bazel  contact.go
harpoon/geometry/: BUILD.bazel  geometry.go
harpoon/kdtree/: BUILD.bazel  (+1 more)
harpoon/material/: BUILD.bazel  material.go
harpoon/ray/: BUILD.bazel  ray.go
harpoon/scene/: BUILD.bazel  scene.go
harpoon/scenepack/: BUILD.bazel  scenepack.go
harpoon/scenepack/headerproto/: BUILD.bazel  scene.proto
harpoon/spectralimage/: BUILD.bazel  spectralimage.go
harpoon/spectralimage/headerproto/: BUILD.bazel  spectral_image_file.proto
headerdrip/: BUILD.bazel  main.go
life-solver/: BUILD.bazel  benchmark-main.go  glider2-huge.cells  glider2.cells  life.go  life_test.go  main.go  reverser-main.go  sadface.cells
life-solver/benchmarker/: BUILD.bazel  benchmarker.go
life-solver/reverser/: BUILD.bazel  reverser.go
manifests/: kustomization.yaml  row-major-web.yaml
masters-thesis-presentation/: index.html.jinja  reveal.css
medtracker/dblayer/: BUILD.bazel  dblayer.go  dblayer_test.go
medtracker/webui/: BUILD.bazel  webui.go
medtracker/webui/uitemplates/: BUILD.bazel  activeuserparams.go  base.go  createmedication.go  createperson.go  home.go  listpatients.go  listpeople.go  login.go  logout.go  recordmedicationrefill.go  showpatient.go
nodejs-test/: BUILD.bazel  mytest.js
repo-tools/: workspace_status.sh
resume/: index.html.jinja
rumor-mill/: BUILD.bazel  main.go
rumor-mill/cmd/poller/: BUILD.bazel  main.go
rumor-mill/cmd/rumor-mill-table-tool/: BUILD.bazel  main.go
rumor-mill/cmd/rumor-tool/: BUILD.bazel  main.go
rumor-mill/cmd/webui/: BUILD.bazel  main.go
rumor-mill/hackernews/: BUILD.bazel  hackernews.go
rumor-mill/scraper/: BUILD.bazel  scraper.go
rumor-mill/scraper/trackerpb/: BUILD.bazel  tracker.proto
rumor-mill/table/: BUILD.bazel  stale-tracked-article.go  trackedarticle.go  watchconfig.go
rumor-mill/table/trackerpb/: BUILD.bazel  empty.go  tracker.proto
service-account-probe/: BUILD.bazel  main.go  pod.yaml
shardedcontroller/: BUILD.bazel  shardedcontroller.go  shardedcontroller_test.go
tools/: container-push.bash
turbodefacer/: BUILD.bazel  main.go
webalator/: BUILD.bazel  README.md  go.mod  main.go  site.go
webalator/content/: BUILD.bazel  base.html.in  base.html.tmpl  index.html.tmpl
webalator/content/articles/2019-07-21-program-trace-analysis-with-wireshark/: index.html.tmpl
webalator/content/articles/2020-02-22-word-squares/: index.html.tmpl
webalator/content/articles/2020-04-01-mona-lisa-life-revisited/: index.html.tmpl
webalator/content/articles/2020-05-12-interactive-word-squares/: index.html.tmpl
webalator/content/articles/2020-09-19-fluid/: index.html.tmpl
webalator/content/articles/rl-force-tube/: index.html.tmpl
webalator/content/ballistae/: index.html.tmpl
webalator/content/frustum/: index.html.tmpl
webalator/content/resume/: index.html.tmpl
webalator/content/sign-in/: index.html.tmpl
webalator/content/toys/ants/: index.html.tmpl
webalator/content/toys/webgl-fluid/: index.html.tmpl
webalator/content/webgl-raytracer/: index.html.tmpl
webalator/contentpack/: BUILD.bazel  contentpack.go
webalator/healthz/: BUILD.bazel  healthz.go
webalator/httpmetrics/: BUILD.bazel  httpmetrics.go
webalator/imgalator/: BUILD.bazel  imgalator.go
webalator/login/: BUILD.bazel  login.go
webalator/mdredir/: BUILD.bazel  mdredir.go
webalator/packer/: BUILD.bazel  main.go  packer.bzl
webalator/packer/manifestpb/: BUILD.bazel  empty.go  manifest.proto
webalator/proxyipreflect/: BUILD.bazel  proxyipreflect.go
webalator/site/: BUILD.bazel  site.go
webalator/static-content/: BUILD.bazel  base.html.jinja  row-major-logo-optimized.svgz
webalator/static-content/about/: index.html.jinja
webalator/static-content/articles/2019-07-21-program-trace-analysis-with-wireshark/: modified-example-program.cc  unmodified-example-program.cc
webalator/static-content/articles/2020-02-22-word-squares/: index.html.jinja
webalator/static-content/articles/2020-05-12-interactive-word-squares/: ui.js
webalator/static-content/articles/2020-09-19-fluid/: fluid.js
webalator/static-content/ballistae/: index.html.jinja
webalator/static-content/masters-thesis-presentation/: white.css
webalator/static-content/resume/: index.html.jinja
webalator/static-content/sign-in/: logic.js
webalator/static-content/toys/ants/: ants.js  main.js  matter.js
webalator/static-content/toys/webgl-fluid/: fluid.js  ui.js
webgl-raytracer/: index.html.jinja  raytracer.js
wordgrid/: BUILD.bazel  handler.go  trie_test.go  wordgrid.go  wordgrid_test.go
(+111 files in other folders)
