load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load("@jinjaize_deps//:requirements.bzl", "requirement")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "jinjaize",
    srcs = ["jinjaize.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        requirement("csscompressor"),
        requirement("htmlmin"),
        requirement("jinja2"),
        requirement("markupsafe"),
    ],
)

all_jinja_templates = [
    "index.html.jinja",
    "articles/rl-force-tube/index.html.jinja",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/index.html.jinja",
    "articles/2020-02-22-word-squares/index.html.jinja",
    "about/index.html.jinja",
    "ballistae/index.html.jinja",
    "frustum/index.html.jinja",
    "masters-thesis-presentation/index.html.jinja",
    "resume/index.html.jinja",
    "webgl-raytracer/index.html.jinja",
]

all_jinja_template_outputs = [tpl.rsplit(".jinja")[0] for tpl in all_jinja_templates]

[genrule(
    name = "generate-{}".format(o),
    srcs = [i],
    outs = [o],
    cmd = "PYTHONIOENCODING=utf8 $(location //:jinjaize) --template-path='./' <$< >$@ || exit 1",
    tools = [
        "//:base.html.jinja",
        "//:jinjaize",
        "//:row-major-logo-optimized.svg",
    ],
) for i, o in zip(all_jinja_templates, all_jinja_template_outputs)]

filegroup(
    name = "jinja_template_results",
    srcs = all_jinja_template_outputs,
)

all_static_incompressible = [
    "ballistae/angry-bunny.jpeg",
    "ballistae/crystal-bunny.jpeg",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/wireshark-custom-dissector.png",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/wireshark-custom-dissector-example.png",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size2-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-BoldItalic.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_AMS-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Bold.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Bold.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size4-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Script-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Typewriter-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-BoldItalic.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size2-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size4-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Bold.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-BoldItalic.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Bold.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-BoldItalic.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size3-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size2-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Bold.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Bold.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Script-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size1-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Italic.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size4-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size1-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size4-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Italic.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Typewriter-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Italic.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size3-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_AMS-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Regular.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Typewriter-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Bold.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Bold.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Bold.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Bold.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Bold.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Bold.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size3-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Fraktur-Bold.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Italic.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Italic.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Italic.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Typewriter-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size2-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size3-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Bold.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size1-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Main-Italic.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_AMS-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Italic.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Italic.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_Size1-Regular.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_Script-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Italic.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Italic.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Script-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Bold.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Regular.eot",
    "masters-thesis-presentation/katex/fonts/KaTeX_Math-Italic.woff2",
    "masters-thesis-presentation/katex/fonts/KaTeX_AMS-Regular.woff",
    "masters-thesis-presentation/katex/fonts/KaTeX_Caligraphic-Bold.ttf",
    "masters-thesis-presentation/katex/fonts/KaTeX_SansSerif-Regular.woff2",
    "masters-thesis-presentation/test-setup-close.jpeg",
    "masters-thesis-presentation/test-setup-far.jpeg",
    "masters-thesis-presentation/an-spy.jpeg",
    "masters-thesis-presentation/ska.jpeg",
    "masters-thesis-presentation/trial-1-results.png",
    "masters-thesis-presentation/trial-2-results.png",
]

all_static_compressible = [
    "articles/rl-force-tube/Chart.js",
    "articles/rl-force-tube/rl-force-tube.js",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/packet_dump.pcap",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/example-protocol-dissector.lua",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/unmodified-example-program.cc",
    "articles/2019-07-21-program-trace-analysis-with-wireshark/modified-example-program.cc",
    "masters-thesis-presentation/reveal.js",
    "masters-thesis-presentation/reveal.css",
    "masters-thesis-presentation/white.css",
    "masters-thesis-presentation/katex/katex.css",
    "masters-thesis-presentation/katex/katex.js",
    "masters-thesis-presentation/katex/contrib/auto-render.min.js",
    "masters-thesis-presentation/phase-space-intro.svg",
    "masters-thesis-presentation/phase-space-classical-steering.svg",
    "masters-thesis-presentation/phase-space-deactivation-steering.svg",
    "masters-thesis-presentation/find-maximal-interval.svg",
    "masters-thesis-presentation/deactivation-pattern-width5pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width10pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width25pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width41pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width50pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width75pct.svg",
    "masters-thesis-presentation/deactivation-pattern-width100pct.svg",
    "masters-thesis-presentation/main-beam-comparison.svg",
    "masters-thesis-presentation/deactivation-main-beam-vs-w.svg",
    "masters-thesis-presentation/classical-pattern.svg",
    "masters-thesis-presentation/captured-elements.svg",
    "masters-thesis-presentation/phase-space-pigeonhole.svg",
    "masters-thesis-presentation/example-array.svg",
    "masters-thesis-presentation/experiment-architecture.svg",
    "masters-thesis-presentation/diamond-robots.svg",
    "masters-thesis-presentation/classical-specific-pattern.svg",
    "masters-thesis-presentation/deactivation-specific-pattern.svg",
    "masters-thesis-presentation/unsteered-specific-pattern.svg",
    "webgl-raytracer/raytracer.frag",
    "webgl-raytracer/raytracer.js",
    "webgl-raytracer/raytracer.vert",
]

all_static = all_static_incompressible + all_static_compressible

all_compressibles = all_jinja_template_outputs + all_static_compressible

all_compressed = ["{}.gz".format(f) for f in all_compressibles]

[genrule(
    name = "compress-{}".format(i),
    srcs = [i],
    outs = [o],
    cmd = "gzip <$< >$@",
) for i, o in zip(all_compressibles, all_compressed)]

all_deploy = all_jinja_template_outputs + all_static + all_compressed

pkg_tar(
    name = "site-tar",
    srcs = all_deploy,
    package_dir = "/var/www",
    strip_prefix = "/",  # Preserve directory structure
)

pkg_tar(
    name = "nginx-conf-tar",
    srcs = ["//:default.conf"],
    package_dir = "/etc/nginx/conf.d/",
    strip_prefix = "/",
)

container_image(
    name = "site-image",
    base = "@nginx_base//image",
    cmd = [
        "nginx",
        "-g",
        "daemon off;",
    ],
    tars = [
        "//:site-tar",
        "//:nginx-conf-tar",
    ],
)

# This rule generates the push digest as //:push-site-container.digest
container_push(
    name = "site-push-actual",
    format = "Docker",
    image = ":site-image",
    registry = "gcr.io",
    repository = "bomsync-214520/row-major-website",
    tag = "{BUILD_TIMESTAMP}",
)

# genrule(
#     name="site-push",
#     srcs=["//:site-push-actual-container.digest"],
#     tools=["@kustomize//file"],
#     outs=["manifests/new-kustomization.yaml"],
#     cmd="",
# )

# Generate
genrule(
    name = "kustomize-manifests",
    srcs = glob(["manifests/**/*.yaml"]),
    outs = ["kustomized-manifest.yaml"],
    cmd = "kustomize build manifests/ >$@",
    tools = ["@kustomize//file"],
)
