load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load("@jinjaize_deps//:requirements.bzl", "requirement")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix row-major
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    external = "vendored",
)

py_binary(
    name = "jinjaize",
    srcs = ["jinjaize.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("csscompressor"),
        requirement("htmlmin"),
        requirement("jinja2"),
        requirement("markupsafe"),
    ],
)
