load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "turbodefacer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "row-major/turbodefacer",
    visibility = ["//visibility:private"],
    deps = ["@com_github_jlaffaye_ftp//:go_default_library"],
)
