load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

go_image(
    name = "webalator_image",
    binary = ":webalator",
)

container_push(
    name = "webalator_push",
    format = "Docker",
    image = ":webalator_image",
    registry = "gcr.io",
    repository = "bomsync-214520/webalator",
    tag = "{BUILD_TIMESTAMP}",
)

go_binary(
    name = "webalator",
    data = ["//webalator/static-content:all_deploy"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "row-major/webalator",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/cloud.google.com/go/compute/metadata:go_default_library",
        "//vendor/cloud.google.com/go/profiler:go_default_library",
        "//vendor/contrib.go.opencensus.io/exporter/stackdriver:go_default_library",
        "//vendor/go.opencensus.io/trace:go_default_library",
        "//webalator/site:go_default_library",
    ],
)
