load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

go_image(
    name = "webalator_image",
    binary = ":webalator",
)

container_push(
    name = "webalator_push",
    format = "Docker",
    image = ":webalator_image",
    registry = "gcr.io",
    repository = "bomsync-214520/webalator",
    tag = "{BUILD_TIMESTAMP}",
)

go_binary(
    name = "webalator",
    data = [
        "//webalator/content:all_deploy",
        "//webalator/static-content:all_deploy",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "row-major/webalator",
    visibility = ["//visibility:private"],
    deps = [
        "//webalator/healthz:go_default_library",
        "//webalator/httpmetrics:go_default_library",
        "//webalator/imgalator:go_default_library",
        "//webalator/mdredir:go_default_library",
        "//webalator/site:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
        "@com_google_cloud_go//profiler:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//monitoredresource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
    ],
)
