load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

go_image(
    name = "webalator_image",
    binary = ":webalator",
)

container_push(
    name = "webalator_push",
    format = "Docker",
    image = ":webalator_image",
    registry = "gcr.io",
    repository = "{STABLE_IMAGE_REPO}/webalator",
    tag = "{STABLE_IMAGE_TAG}",
)

go_binary(
    name = "webalator",
    data = [
        ":row_major_content",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "row-major/webalator",
    visibility = ["//visibility:private"],
    deps = [
        "//webalator/contentpack:go_default_library",
        "//webalator/healthz:go_default_library",
        "//webalator/httpmetrics:go_default_library",
        "//webalator/imgalator:go_default_library",
        "//webalator/mdredir:go_default_library",
        "//webalator/proxyipreflect:go_default_library",
        "//webalator/site:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
        "@com_google_cloud_go//profiler:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//monitoredresource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
    ],
)

load("@//webalator/packer:packer.bzl", "webalator_content_pack")

webalator_content_pack(
    name = "row_major_content",
    static_file_trim_prefix = "webalator/static-content/",
    static_files = ["//webalator/static-content:all_deploy"],
    template_base_file = "//webalator/content:template_base",
    template_file_trim_prefix = "webalator/content/",
    template_files = ["//webalator/content:template_specializations"],
)
