load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["camera.go"],
    importpath = "row-major/harpoon/camera",
    visibility = ["//visibility:public"],
    deps = [
        "//harpoon/ray:go_default_library",
        "//harpoon/vmath/mat33:go_default_library",
        "//harpoon/vmath/vec3:go_default_library",
    ],
)
