load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["geometry.go"],
    importpath = "row-major/harpoon/geometry",
    visibility = ["//visibility:public"],
    deps = [
        "//harpoon/aabox:go_default_library",
        "//harpoon/contact:go_default_library",
        "//harpoon/ray:go_default_library",
        "//harpoon/vmath/vec2:go_default_library",
        "//harpoon/vmath/vec3:go_default_library",
    ],
)
