load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["material.go"],
    importpath = "row-major/harpoon/material",
    visibility = ["//visibility:public"],
    deps = [
        "//harpoon/contact:go_default_library",
        "//harpoon/densesignal:go_default_library",
        "//harpoon/ray:go_default_library",
        "//harpoon/vmath/vec2:go_default_library",
        "//harpoon/vmath/vec3:go_default_library",
    ],
)
