load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scene.go"],
    importpath = "row-major/harpoon/scene",
    visibility = ["//visibility:public"],
    deps = [
        "//harpoon/aabox:go_default_library",
        "//harpoon/affinetransform:go_default_library",
        "//harpoon/camera:go_default_library",
        "//harpoon/contact:go_default_library",
        "//harpoon/geometry:go_default_library",
        "//harpoon/kdtree:go_default_library",
        "//harpoon/material:go_default_library",
        "//harpoon/ray:go_default_library",
        "//harpoon/spectralimage:go_default_library",
        "//harpoon/vmath/mat33:go_default_library",
        "//harpoon/vmath/vec2:go_default_library",
        "//harpoon/vmath/vec3:go_default_library",
    ],
)
