load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dblayer.go"],
    importpath = "row-major/medtracker/dblayer",
    visibility = ["//visibility:public"],
    deps = [
        "//medtracker/dbtypes:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library",
        "@org_golang_google_api//idtoken:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dblayer_test.go"],
    embed = [":go_default_library"],
)
