load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["webui.go"],
    importpath = "row-major/medtracker/webui",
    visibility = ["//visibility:public"],
    deps = [
        "//medtracker/dblayer:go_default_library",
        "//medtracker/dbtypes:go_default_library",
        "//medtracker/webui/uitemplates:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
    ],
)
