load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scraper.go"],
    importpath = "row-major/rumor-mill/scraper",
    visibility = ["//visibility:public"],
    deps = [
        "//rumor-mill/hackernews:go_default_library",
        "//rumor-mill/scraper/trackerpb:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
