load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scraper.go"],
    importpath = "row-major/rumor-mill/scraper",
    visibility = ["//visibility:public"],
    deps = [
        "//rumor-mill/hackernews:go_default_library",
        "//rumor-mill/table:go_default_library",
        "//rumor-mill/table/trackerpb:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)
