load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["trackedarticle.go"],
    importpath = "row-major/rumor-mill/table",
    visibility = ["//visibility:public"],
    deps = [
        "//rumor-mill/table/trackerpb:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel//codes:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
