filegroup(
    name = "template_specializations",
    srcs = glob(
        include = ["**/*.html.tmpl"],
        exclude = ["base.html.tmpl"],
    ),
    visibility = ["//webalator:__subpackages__"],
)

filegroup(
    name = "template_base",
    srcs = ["base.html.tmpl"],
    visibility = ["//webalator:__subpackages__"],
)
