load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["contentpack.go"],
    importpath = "row-major/webalator/contentpack",
    visibility = ["//visibility:public"],
    deps = [
        "//webalator/packer/manifestpb:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
