load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "row-major/webalator/packer",
    visibility = ["//visibility:private"],
    deps = [
        "//webalator/packer/manifestpb:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "packer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
