load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["site.go"],
    importpath = "row-major/webalator/site",
    visibility = ["//visibility:public"],
    deps = [
        "//wordgrid:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
    ],
)
