load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["site.go"],
    importpath = "row-major/webalator/site",
    visibility = ["//visibility:public"],
    deps = [
        "//webalator/contentpack:go_default_library",
        "//wordgrid:go_default_library",
    ],
)
